products slider overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2552,6 +2552,7 @@ h3 {
 }
 
 .products__tabs-wrapper {
+  height: 553px;
   overflow: hidden;
 }
 
